aws-eks-starter/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: game-2048
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: game-2048
